--- a/client/src/App.css
+++ b/client/src/App.css
@@ -107,3 +107,18 @@ body {
 span {
   color: red;
 }
+
+.navbar{
+ width: 100%;
+  height: 70px;
+  background-color: dodgerblue;
+  display: flex;
+  align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.navbar a{
+  margin-left: 20px;
+  text-decoration: none;
+  color: white;
+}
