--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,6 @@
   height: auto;
   display: flex;
   align-items: center;
-  padding-top: 40px;
   flex-direction: column;
 }
 
@@ -75,7 +74,6 @@ body {
   padding: 20px;
   border: 5px solid dodgerblue;
   border-radius: 5px;
-
 }
 
 .formContainer #inputCreatePost {
@@ -86,7 +84,6 @@ body {
   border-radius: 5px;
   padding-left: 10px;
   font-size: 20px;
- 
 }
 
 .formContainer button {
@@ -101,15 +98,16 @@ body {
 .formContainer button:hover {
   cursor: pointer;
   background-color: dodgerblue;
-
 }
 
 span {
   color: red;
 }
 
-.navbar{
- width: 100%;
+/* NAVBAR */
+
+.navbar {
+  width: 100%;
   height: 70px;
   background-color: dodgerblue;
   display: flex;
@@ -117,8 +115,44 @@ span {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.navbar a{
+.navbar a {
   margin-left: 20px;
   text-decoration: none;
   color: white;
+}
+
+/* INDIVIDUAL POST */
+.postPage {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+}
+
+.leftSide {
+  flex: 50%;
+  height: calc(100vh - 70px);
+  display: grid;
+  place-items: center;
+}
+
+.rightSide {
+  flex: 50%;
+  height: calc(100vh - 70px);
+  display: grid;
+  place-items: center;
+}
+
+#individual {
+  height: 500px;
+  width: 600px;
+}
+
+#individual .title,
+#individual .footer {
+  font-size: 30px;
+}
+
+#individual .body {
+  font-size: 25px;
 }
